--- a/src/main/resources/templates/ui/validateComments.html
+++ b/src/main/resources/templates/ui/validateComments.html
@@ -25,6 +25,7 @@
     .styled-table td {
         padding: 12px 15px;
     }
+
     .styled-table tbody tr {
         border-bottom: 1px solid #dddddd;
     }
@@ -33,55 +34,114 @@
         background-color: #f3f3f3;
     }
 
+    .styled-table tbody tr:hover {
+        background-color: #ffff99;
+    }
+
     .styled-table tbody tr:last-of-type {
         border-bottom: 2px solid #009879;
     }
-    .styled-table tbody tr.active-row {
-        font-weight: bold;
-        color: #009879;
+
+    .styled-table tbody tr.treated {
+        display: none;
     }
 
 </style>
 <script>
-    const validationSource = new EventSource("/live/comments/validation/stream")
-    validationSource.onmessage = function (event) {
-        const commentTable = document.getElementById("validationTable");
-        const comment = JSON.parse(event.data)
-        const newRow = document.createElement("tr");
-        const name=document.createElement("td")
-        name.textContent=comment.user.name;
-        newRow.appendChild(name)
 
-        const item=document.createElement("td")
-        item.textContent=comment.item;
-        newRow.appendChild(item)
+    function commentValidated(id, newAction, event) {
+        console.log(id + " has been validated, action is " + newAction);
+        console.log(event);
+        let targetRow = document.getElementById(id);
+        targetRow.classList.add("treated")
+    }
 
-        const action=document.createElement("td")
-        action.textContent=comment.action;
-        newRow.appendChild(action)
+    function createCorrectionCell(id) {
+        let buy = document.createElement("button");
+        buy.textContent = "€";
+        buy.classList.add("validationButton");
+        buy.addEventListener("click", clickEvent => {
+            commentValidated(id, "BUY", clickEvent);
+        });
 
-        const fullComment=document.createElement("td")
-        fullComment.textContent=comment.fullComment;
-        newRow.appendChild(fullComment)
+        let review = document.createElement("button");
+        review.textContent = "👁";
+        review.classList.add("validationButton");
+        review.addEventListener("click", clickEvent => {
+            commentValidated(id, "REVIEW", clickEvent);
+        });
 
-        const validation=document.createElement("td")
-        validation.textContent="to do";
-        newRow.appendChild(validation)
+        let question = document.createElement("button");
+        question.textContent = "?";
+        question.classList.add("validationButton");
+        question.addEventListener("click", clickEvent => {
+            commentValidated(id, "QUESTION", clickEvent);
+        });
+
+        let nothing = document.createElement("button");
+        nothing.textContent = "∅";
+        nothing.classList.add("validationButton");
+        nothing.addEventListener("click", clickEvent => {
+            commentValidated(id, "NOTHING", clickEvent);
+        });
+
+        let correction = document.createElement("td");
+        correction.appendChild(buy);
+        correction.appendChild(review);
+        correction.appendChild(question);
+        correction.appendChild(nothing);
+        correction.classList.add("correctionBar")
+        return correction;
+    }
+
+    function newComment(event) {
+        let commentTable = document.getElementById("validationBody");
+        let comment = JSON.parse(event.data);
+        let id = comment.id;
+        let newRow = document.createElement("tr");
+        newRow.id = id;
+        newRow.appendChild(createCorrectionCell(id));
+
+        let name = document.createElement("td");
+        name.textContent = comment.user.name;
+        newRow.appendChild(name);
+
+        let action = document.createElement("td");
+        action.textContent = "✔" + comment.action;
+        action.classList.add("validationButton");
+        action.addEventListener("click", clickEvent => {
+            commentValidated(id, null, clickEvent);
+        });
+        newRow.appendChild(action);
+
+        let item = document.createElement("td");
+        item.textContent = comment.item;
+        newRow.appendChild(item);
+
+        let fullComment = document.createElement("td");
+        fullComment.textContent = comment.fullComment;
+        newRow.appendChild(fullComment);
 
         commentTable.appendChild(newRow);
     }
+
+    let validationSource = new EventSource("/live/comments/validation/stream")
+    validationSource.onmessage = newComment
 </script>
 <body>
 <h1>Flux de commentaires</h1>
 <table id="validationTable" class="styled-table">
     <thead>
     <tr>
+        <td>Correction</td>
         <td>Nom</td>
         <td>Numéro</td>
         <td>Action</td>
         <td>Commentaire complet</td>
     </tr>
     </thead>
+    <tbody id="validationBody">
+    </tbody>
 </table>
 </body>
 </html>
